prototypes/victoria-logs-single/ytt/ingressroute.yaml

#@ load("@ytt:data", "data")
#@ domain = "logs." + data.values.shared.domain
#@ traefikLB = "lb." + data.values.shared.domain
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: logs
  annotations:
    external-dns.alpha.kubernetes.io/target: #@ traefikLB
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
  - websecure
  routes:
    - kind: Rule
      match: #@ "Host(`{}`)".format(domain)
      priority: 10
      services:
        - name: victoria-logs-single-server
          port: 9428
      middlewares:
      - name: auth-logs
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: auth-logs
spec:
  basicAuth:
    secret: auth-logs
